# Probability_and_Statistics

./: Binomial.ipynb  pyproject.toml
