[tool.poetry]
name = "probabilidad y estadísrtica"
version = "0.1.0"
description = ""
authors = ["jadiazm <jonathan.diazm5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
ipykernel = "^6.27.1"
pandas = "^2.1.4"
xlrd = "^2.0.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
